--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -15,5 +15,9 @@
   "type": "module",
   "dependencies": {
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1"
   }
 }
