--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -14,10 +14,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "firebase-admin": "^13.2.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@repo/types": "*",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1"
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
