--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -2,7 +2,7 @@
   "name": "primary-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node dist/index.js",
@@ -12,9 +12,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
