--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.7.4",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
