--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "use-debounce": "^10.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
