--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "npm run build && node dist/index.js",
     "build": "tsc -b"
   },
   "keywords": [],
