--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
+    "tldraw": "^3.13.1",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.5",
     "zustand": "^5.0.3"
